<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edt_update_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_no"
        android:inputType="number"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

    <EditText
        android:id="@+id/edt_update_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_name"
        android:inputType="textPersonName"
        android:layout_below="@+id/edt_update_no"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

    <EditText
        android:id="@+id/edt_update_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_phone"
        android:inputType="phone"
        android:layout_below="@+id/edt_update_name"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_button"
        android:layout_below="@+id/edt_update_phone"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/btn_bg"
        android:layout_marginBottom="@dimen/_5sdp"/>

    <Button
        android:id="@+id/btn_update_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:layout_below="@+id/edt_update_phone"
        android:layout_toEndOf="@+id/btn_update"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/btn_bg"
        android:layout_marginBottom="@dimen/_5sdp"/>

</RelativeLayout>