<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="@dimen/_3sdp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp">

            <TextView
                android:id="@+id/tv_Product_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/open_sans_light"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/tv_Product_Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_quantity"
                android:textSize="@dimen/_12sdp"
                android:layout_below="@+id/tv_Product_Name"
                android:fontFamily="@font/open_sans_light"
                android:textColor="#000000"/>


            <TextView
                android:id="@+id/tv_Product_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_Product_Quantity"
                android:text="@string/product_price"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/open_sans_light"
                android:textColor="#000000"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp">

            <ImageView
                android:id="@+id/iv_Product_Edit"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_mode_edit_black_24dp"
                android:layout_marginEnd="@dimen/_5sdp" />
            <ImageView
                android:id="@+id/iv_Product_Delete"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/iv_Product_Edit"
                android:src="@drawable/ic_delete_black_24dp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"/>
            
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>